--- a/JotJotiOS/project.yml
+++ b/JotJotiOS/project.yml
@@ -29,3 +29,7 @@ targets:
         INFOPLIST_KEY_UISupportedInterfaceOrientations: "UIInterfaceOrientationPortrait"
         INFOPLIST_KEY_NSMicrophoneUsageDescription: "JotJot 需要麦克风权限来录制语音并转换为文字"
         INFOPLIST_KEY_NSSpeechRecognitionUsageDescription: "JotJot 需要语音识别权限来将您的语音转换为文字"
+    attributes:
+      SystemCapabilities:
+        com.apple.iCloud:
+          enabled: 1
