feat: Mac 添加 App 图标

--- a/JotJotMac/project.yml
+++ b/JotJotMac/project.yml
@@ -12,6 +12,7 @@ targets:
     sources:
       - path: Sources
       - path: ../JotJotKit/Sources
+      - path: Resources/Assets.xcassets
     settings:
       base:
         PRODUCT_NAME: JotJot
